--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">gemma2-litert-app</string>
+    <string name="app_name">efficientdet-litert-app</string>
 </resources>
